--- a/vtr/src/pages/Projects/ProjectsPage.css
+++ b/vtr/src/pages/Projects/ProjectsPage.css
@@ -26,17 +26,6 @@
 
 /*
 ****************************************
-***** TABLET LANDSCAPE RESPONSIVE ******
-****************************************
-*/
-@media (max-width: 1199px) {
-    .vtr_all_projects ul {
-        margin-bottom: -24px;
-    }
-}
-
-/*
-****************************************
 ****** TABLET PORTRAIT RESPONSIVE ******
 ****************************************
 */
